- add questions deatils

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Awesome Answers</h1>
+    <div id="question-details" class="hidden"></div>
+    <div id="question-list"></div>
   </body>
 </html>
