--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <nav>
+      <a href data-href= "question-list">Questions</a>
+      |
+      <a href data-href="question-form">New Question</a>
+    </nav>
     <h1>Awesome Answers</h1>
     <div id="question-details" class="hidden"></div>
     <div id="question-list"></div>
